--- a/locales/uk/translation.json
+++ b/locales/uk/translation.json
@@ -84,125 +84,63 @@
     }
   },
   "about": {
-    "title": "Про нас",
-    "main": {
-      "paragraph1": "«ТД Столиця Маркет» — команда професіоналів, яка спеціалізується на будівництві житлових та нежитлових об'єктів, реконструкції інфраструктури, спорудженні укриттів та підземних комплексів. З 2016 року ми успішно реалізуємо проекти будь-якої складності, використовуючи сучасні технології, якісні матеріали та інноваційні підходи. Наш досвід дозволяє нам забезпечувати високу якість та надійність кожного об'єкта, від невеликих споруд до масштабних інфраструктурних рішень.",
-      "paragraph2": "Одним із наших ключових напрямків є виробництво металоконструкцій та бетонних рішень, які забезпечують безпеку та довговічність. Ми працюємо з відповідальністю та дотримуємося міжнародних стандартів, що підтверджується нашою сертифікованою системою управління: (ISO 9001(2015), ISO 45001(2019), 14001(2015).",
-      "paragraph3": "Наша команда налічує понад 100 кваліфікованих співробітників, які щодня докладають зусиль для реалізації найскладніших завдань. Ми маємо всі необхідні ліцензії для ведення діяльності, зокрема та EL01:8020-2630-9976-1706, що гарантує нашим клієнтам прозорість та дотримання всіх нормативних вимог.",
-      "paragraph4": "Щорічний оборот компанії становить 1 мільярд гривень, що свідчить про нашу стабільність та довіру клієнтів. Ми пишаємося тим, що кожен наш проект — це поєднання сучасних технологій, якісних матеріалів та відповідального підходу. Наша мета — створювати простори, які забезпечують комфорт, безпеку та довговічність для кожного."
+    "hero": {
+      "title": "ТД Столиця Маркет",
+      "mainQuote": "Ми будуємо не просто споруди — ми створюємо надійне майбутнє",
+      "paragraph1": "«ТД Столиця Маркет» — команда професіоналів, яка спеціалізується на будівництві житлових та нежитлових об'єктів, реконструкції інфраструктури, спорудженні укриттів та підземних комплексів. З 2016 року ми успішно реалізуємо проекти будь-якої складності, використовуючи сучасні технології, якісні матеріали та інноваційні підходи.",
+      "viewProjects": "Дивитися проекти"
     },
-    "mainQuote": "Ми будуємо не просто споруди — ми створюємо надійне майбутнє",
-    "stats": {
-      "years": "Років досвіду",
-      "specialists": "Фахівців",
-      "revenue": "млрд. грн. оборот",
-      "certificates": "Сертифікати якості"
+    "mainContentSection": {
+      "title": "Про нашу компанію",
+      "paragraph1": "«ТД Столиця Маркет» — команда професіоналів, яка спеціалізується на будівництві житлових та нежитлових об'єктів, реконструкції інфраструктури, спорудженні укриттів та підземних комплексів. З 2016 року ми успішно реалізуємо проекти будь-якої складності, використовуючи сучасні технології, якісні матеріали та інноваційні підходи.",
+      "paragraph2": "Одним із наших ключових напрямків є виробництво металоконструкцій та бетонних рішень, які забезпечують безпеку та довговічність. Ми працюємо з відповідальністю та дотримуємося міжнародних стандартів, що підтверджується нашою сертифікованою системою управління: ISO 9001(2015), ISO 45001(2019), 14001(2015).",
+      "certificates": "ISO сертифікати",
+      "yearsOnMarket": "років досвіду",
+      "specialists": "фахівців"
+    },
+    "process": {
+      "titleMain": "Як ми працюємо",
+      "titleOne": "Аналіз та планування",
+      "descriptionOne": "Детальне вивчення потреб клієнта, розробка концепції та складання кошторису робіт.",
+      "titleTwo": "Проектування",
+      "descriptionTwo": "Створення технічної документації, 3D-моделювання об'єктів та узгодження всіх деталей.",
+      "titleThree": "Виробництво та будівництво",
+      "descriptionThree": "Виготовлення металоконструкцій, підготовка матеріалів та будівництво об'єкта під контролем інженерів.",
+      "titleFour": "Контроль якості та здача",
+      "descriptionFour": "Суворий контроль кожного етапу робіт та здача об'єкта з повною документацією та гарантією."
     },
     "featuredProject": {
       "title": "Наш знаковий проект",
-      "description": "Комплекс захисних споруд та укриттів, реалізований у 2023 році на замовлення оборонного сектору. Проект включав будівництво підземних приміщень з використанням інноваційних матеріалів, що забезпечують максимальний рівень захисту та комфорту одночасно."
+      "description": "Комплекс захисних споруд та укриттів, реалізований у 2023 році на замовлення оборонного сектору. Проект включав реконструкцію історичної будівлі на вулиці Соборній, 151. Реставрація фасаду та внутрішніх приміщень із збереженням історичної цінності об'єкта..",
+      "span1": "Інноваційні матеріали",
+      "span2": "Максимальний захист",
+      "span3": "Сучасні технології",
+      "viewProject": "Переглянути проект"
     },
-    "process": {
-      "title": "Як ми працюємо",
-      "steps": {
-        "step1": {
-          "title": "Аналіз та планування",
-          "description": "Детальне вивчення потреб клієнта, розробка концепції та складання кошторису робіт."
-        },
-        "step2": {
-          "title": "Проектування",
-          "description": "Створення технічної документації, 3D-моделювання об'єктів та узгодження всіх деталей."
-        },
-        "step3": {
-          "title": "Виробництво та будівництво",
-          "description": "Виготовлення металоконструкцій, підготовка матеріалів та будівництво об'єкта під контролем інженерів."
-        },
-        "step4": {
-          "title": "Контроль якості та здача",
-          "description": "Суворий контроль кожного етапу робіт та здача об'єкта з повною документацією та гарантією."
-        }
-      }
-    },
-    "history": {
-      "title": "Історія компанії",
-      "paragraph1": "Компанія «ТД Столиця Маркет» заснована у 2016 році групою інженерів-будівельників, які ставили за мету створювати якісні та надійні об'єкти з урахуванням сучасних технологій. Спочатку ми реалізовували невеликі комерційні та житлові проєкти, але завдяки чіткому плануванню та відповідальному підходу швидко розширили масштаби діяльності.",
-      "paragraph2": "До 2019 року компанія вже зарекомендувала себе як надійного виконавця складних будівельних робіт, отримала сертифікати ISO 9001(2015), ISO 45001(2019), 14001(2015) та запустила власне виробництво металоконструкцій і бетонних рішень. Подальший розвиток супроводжувався участю у державних тендерах, реконструкцією інфраструктури та будівництвом оборонних споруд після початку повномасштабної війни.",
-      "paragraph3": "Сьогодні «ТД Столиця Маркет» — це команда з понад 100 фахівців, яка реалізує проєкти будь-якої складності. Наш досвід, сучасні технології та дотримання міжнародних стандартів дозволяють гарантувати якість і довговічність кожного об'єкта. Ми продовжуємо розвиватися, зберігаючи наші ключові цінності — надійність, інновації та відповідальність перед клієнтами і суспільством."
-    },
-    "philosophy": {
-      "title": "Філософія компанії",
-      "paragraph1": "Ми віримо, що будівництво — це не просто створення об'єктів, а формування просторів, які впливають на якість життя людей. Кожен наш проект — це поєднання інновацій, надійності та відповідальності. Ми прагнемо не лише задовольняти потреби клієнтів, але й виходити за межі очікувань, створюючи рішення, які витримують час і виклики.",
-      "paragraph2": "Наша місія — будувати майбутнє, де кожен об'єкт стає свідченням якості, безпеки та довговічності. Ми розуміємо, що наша робота впливає на життя людей, тому підходимо до кожного проекту з максимальною віддачею та увагою до деталей.",
-      "paragraph3": "Для нас важливі не лише технічні параметри, але й довіра клієнтів, екологічна відповідальність та соціальна значущість. Ми будуємо не просто будівлі — ми створюємо умови для розвитку, захисту та комфорту.",
-      "paragraph4": "Наша філософія — це поєднання професійного досвіду, сучасних технологій та віри в те, що кожен проект має значення. Ми будуємо не просто об'єкти — ми будуємо довіру."
-    },
-    "team": {
-      "title": "Наша команда",
-      "quote": "Наш успіх ґрунтується на професіоналізмі, відданості та інноваційному мисленні кожного члена команди.",
-      "paragraph1": "Наша команда налічує понад 100 кваліфікованих співробітників, які щодня докладають зусиль для реалізації найскладніших завдань. Це професіонали в різних галузях: інженери, архітектори, технологи, управлінці, фахівці з безпеки та логістики.",
-      "paragraph2": "Ми постійно підвищуємо кваліфікацію наших фахівців, впроваджуємо нові підходи до роботи та забезпечуємо комфортні умови для розвитку кожного члена команди. Наші співробітники мають доступ до сучасних технологій та можливість реалізувати свій потенціал у значущих проектах."
-    },
-    "strategy": {
-      "title": "Стратегія",
-      "intro": "Наша стратегія спрямована на досягнення лідерства у сфері будівництва, виробництва та реконструкції інфраструктури через інновації, якість та відповідальний підхід. Ми прагнемо стати надійним партнером для наших клієнтів, пропонуючи комплексні рішення, які забезпечують безпеку, довговічність та ефективність.",
-      "goalsTitle": "Основні цілі:",
-      "goals": {
-        "goal1": {
-          "title": "Розширення спектру послуг",
-          "items": [
-            "Впровадження нових напрямків, таких як \"розумне будівництво\" (smart construction) та екологічно орієнтовані проекти.",
-            "Розвиток виробництва інноваційних фортифікаційних матеріалів."
-          ]
-        },
-        "goal2": {
-          "title": "Підвищення якості та ефективності",
-          "items": [
-            "Впровадження сучасних технологій (BIM-моделювання, автоматизація процесів).",
-            "Постійне навчання та підвищення кваліфікації співробітників."
-          ]
-        },
-        "goal3": {
-          "title": "Зміцнення позицій на ринку",
-          "items": [
-            "Активна участь у державних та приватним тендерах.",
-            "Розширення географії діяльності та вихід на нові ринки."
-          ]
-        },
-        "goal4": {
-          "title": "Розвиток партнерських відносин",
-          "items": [
-            "Створення стратегічних альянсів з надійними постачальниками та підрядниками.",
-            "Розширення мережі партнерів для оптимізації логістики та зниження витрат."
-          ]
-        },
-        "goal5": {
-          "title": "Соціальна та екологічна відповідальність",
-          "items": [
-            "Впровадження екологічно чистих технологій у будівництві.",
-            "Підтримка соціальних ініціатив, спрямованих на відновлення інфраструктури та допомогу постраждалим від війни."
-          ]
-        }
+    "values": {
+      "title": "Наші цінності",
+      "reliability": {
+        "title": "Надійність",
+        "description": "Ми виконуємо обіцянки та гарантуємо якість"
       },
-      "valuesTitle": "Наші цінності у стратегії:",
-      "values": {
-        "value1": {
-          "title": "Надійність",
-          "description": "Ми виконуємо обіцянки та гарантуємо якість."
-        },
-        "value2": {
-          "title": "Інновації",
-          "description": "Постійно вдосконалюємо процеси та технології."
-        },
-        "value3": {
-          "title": "Відповідальність",
-          "description": "Працюємо з урахуванням інтересів клієнтів, суспільства та навколишнього середовища."
-        }
+      "innovation": {
+        "title": "Інновації",
+        "description": "Постійно вдосконалюємо процеси та технології"
+      },
+      "responsibility": {
+        "title": "Відповідальність",
+        "description": "Працюємо з урахуванням інтересів клієнтів, суспільства та навколишнього середовища"
       }
     },
     "cta": {
       "title": "Готові втілити ваш проект?",
       "text": "Довірте нам реалізацію ваших будівельних задумів. Наша команда забезпечить якісне виконання робіт з дотриманням усіх стандартів та термінів.",
-      "button": "Зв'язатися з нами"
+      "button": "Зв'язатися з нами",
+      "viewPortfolio": "Переглянути портфоліо",
+      "yearsOnMarket": "РОКІВ ДОСВІДУ",
+      "specialists": "ФАХІВЦІВ",
+      "oborot": "МЛРД. ГРН. ОБОРОТУ",
+      "certificates": "СЕРТИФІКАТИ ЯКОСТІ"
     }
   },
   "faq": {
@@ -372,10 +310,13 @@
     "viewAll": "Переглянути всі проекти"
   },
   "construction": {
+    "title": "Наші проекти",
     "statusCompleted": "Будівництво завершено",
     "statusInProgress": "Будівництво триває"
   },
   "design": {
+    "title": "Наші проекти дизайну",
+    "description": "Ми створюємо функціональні та естетичні дизайнерські рішення для різних типів об'єктів. Наша команда дизайнерів працює над створенням сучасних просторів, які задовольняють потреби клієнтів.",
     "implementation": "Реалізовується",
     "realized": "Реалізовано",
     "notImplemented": "Не реалізовано"
@@ -388,6 +329,25 @@
     "photoAlt": "Фото проекту",
     "prevPhoto": "Попереднє фото",
     "nextPhoto": "Наступне фото",
-    "goToPhoto": "Перейти до фото"
+    "goToPhoto": "Перейти до фото",
+    "projectNotFound": "Проект не знайдено",
+    "projectNotFoundDesc": "На жаль, запитуваний проект не існує.",
+    "backToGallery": "Повернутися до галереї",
+    "backToLastPage": "Назад",
+    "projectPhotos": "Фотогалерея проекту",
+    "otherProjects": "Інші проекти"
+  },
+  "notFound": {
+    "notFoundPage": {
+      "title": "Сторінку не знайдено",
+      "description": "На жаль, запитувальної сторінки не існує.",
+      "backText": "Повернутися назад",
+      "backToMain": "На головну",
+      "tryAgain": "Спробувати ще раз",
+      "interests": "Можливо, вас зацікавить:",
+      "constrProj": "Наші проекти будівництва",
+      "designSolution": "Дизайнерські рішення",
+      "aboutCompany": "Про нашу компанію"
+    }
   }
 }
