--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -145,144 +145,10 @@
   },
   "faq": {
     "title": "Питання та відповіді",
-    "items": [
-      {
-        "id": 1,
-        "question": "Чим «ТД Столиця Маркет» відрізняється від інших будівельних компаній?",
-        "answer": "Ми поєднуємо 9+ років досвіду з сучасними технологіями (BIM-моделювання, власне виробництво матеріалів) та дотримуємося міжнародних стандартів (ISO 9001, ISO 45001). Наші ключові переваги — це робота «під ключ», індивідуальний підхід до кожного проекту та участь у відновленні інфраструктури України."
-      },
-      {
-        "id": 2,
-        "question": "Які послуги ви пропонуєте?",
-        "answer": "Ми спеціалізуємося на:",
-        "listItems": [
-          "Будівництві (житлові/нежитлові об'єкти, укриття, реконструкція);",
-          "Виробництві (металоконструкції, бетонні фортифікаційні елементи);",
-          "Проектуванні (від концепції до реалізації);",
-          "Торгівлі (матеріали, участь у держзакупівлях)."
-        ]
-      },
-      {
-        "id": 3,
-        "question": "Чи маєте сертифікати якості?",
-        "answer": "Так, наша робота відповідає міжнародним стандартам:",
-        "listItems": [
-          "ISO 9001 (якість управління);",
-          "ISO 45001 (безпека праці);",
-          "ISO 14001 (екологічна відповідальність)."
-        ],
-        "additionalInfo": "Уся продукція виробляється згідно з ДСТУ."
-      },
-      {
-        "id": 4,
-        "question": "Які проекти ви реалізували після 2022 року?",
-        "answer": "Ми брали участь у:",
-        "listItems": [
-          "Будівництві захисних споруд і бункерів;",
-          "Відновленні зруйнованої інфраструктури;",
-          "Поставках фортифікаційних конструкцій (бетонні блоки, металеві загородження)."
-        ]
-      },
-      {
-        "id": 5,
-        "question": "Чи берете участь у тендерах?",
-        "answer": "Так, ми успішно реалізуємо державні та комерційні контракти. Наші переваги — прозорі умови, дотримання строків і підтримка на всіх етапах."
-      },
-      {
-        "id": 6,
-        "question": "Чи надаєте гарантію на об'єкти?",
-        "answer": "Так, усі роботи супроводжуються гарантійними зобов'язаннями. Термін залежить від типу проекту та обговорюється індивідуально."
-      },
-      {
-        "id": 7,
-        "question": "Як організована безпека працівників під час обстрілів?",
-        "answer": "Усі майданчики обладнані:",
-        "listItems": [
-          "Підземними сховищами з запасом води/їжі;",
-          "Супутниковим зв'язком;",
-          "Медиками-психологами в бригадах."
-        ]
-      },
-      {
-        "id": 8,
-        "question": "Чи використовуєте зарубіжні технології?",
-        "answer": "Адаптуємо світовий досвід:",
-        "listItems": [
-          "Німецькі стандарти енергоефективності;",
-          "Фінські методи швидкого будівництва в зимових умовах;",
-          "Польські тренінги з безпеки праці."
-        ]
-      },
-      {
-        "id": 9,
-        "question": "Які переваги у співпраці з вами для постачальників будматеріалів?",
-        "listItems": [
-          "Щомісячний обсяг закупівель — понад 1 млн євро",
-          "Готовність розвивати дилерську мережу бренду в Україні",
-          "Інтеграція матеріалів у проєктні рішення",
-          "Гнучкі умови оплати та логістики",
-          "Популяризація бренду через наші об'єкти"
-        ]
-      },
-      {
-        "id": 10,
-        "question": "Чи готові ви виступати офіційним дистриб'ютором будматеріалів в Україні?",
-        "answer": "Так, ми відкриті до стратегічного партнерства з виробниками та готові розвивати дилерську мережу вашої продукції, забезпечуючи її просування, логістику та присутність у ключових проєктах по всій Україні."
-      },
-      {
-        "id": 11,
-        "question": "Чи займаєтесь ви проєктуванням?",
-        "answer": "Так, наші фахівці виконують повний цикл проєктування — від концепції до реалізації, з урахуванням безпеки, енергоефективності та можливості глибокої інтеграції нових матеріалів чи рішень у структуру об'єкта."
-      },
-      {
-        "id": 12,
-        "question": "У яких регіонах України ви працюєте?",
-        "answer": "Ми працюємо по всій Україні. Наша логістика оптимізована, щоб забезпечити швидку доставку матеріалів і ефективну реалізацію проєктів незалежно від географії."
-      },
-      {
-        "id": 13,
-        "question": "Який обсяг робіт компанія може виконувати щомісяця?",
-        "answer": "Наша компанія здатна обробляти проєкти з закупівельним обсягом понад 1 млн євро щомісяця, завдяки наявності власного виробництва, логістики та досвідченої команди."
-      },
-      {
-        "id": 14,
-        "question": "Скільки співробітників працює у вашій компанії?",
-        "answer": "Наша команда складається з понад 100 кваліфікованих спеціалістів, серед яких — інженери, архітектори, проєктувальники, логісти, технічні працівники та адміністративний персонал."
-      },
-      {
-        "id": 15,
-        "question": "Чи берете участь у публічних закупівлях?",
-        "answer": "Так. Ми активно працюємо в системі Prozorro, беремо участь у відкритих тендерах та маємо успішні кейси реалізації державних контрактів у сфері будівництва та реконструкції."
-      },
-      {
-        "id": 16,
-        "question": "Які товари та матеріали ви закуповуєте найчастіше?",
-        "answer": "Ми регулярно закуповуємо:",
-        "listItems": [
-          "цемент та бетонні суміші",
-          "арматуру, металопрокат",
-          "гідроізоляційні та теплоізоляційні матеріали",
-          "електротехнічну продукцію",
-          "матеріали для фортифікаційних споруд",
-          "облицювання та фасадні системи"
-        ]
-      },
-      {
-        "id": 17,
-        "question": "Чи працюєте ви за системою «будівництво під ключ»?",
-        "answer": "Так. Ми надаємо повний цикл послуг: від проектування та узгоджень — до реалізації, контролю якості, здачі об'єкта та його подальшої підтримки."
-      },
-      {
-        "id": 18,
-        "question": "Як стати вашим постачальником або партнером?",
-        "answer": "Просто надішліть нам коротку презентацію або комерційну пропозицію. Ми розглядаємо всі запити та відкриті до довгострокових відносин з постачальниками, дистриб'юторами й виробниками, орієнтованими на якість та надійність."
-      },
-      {
-        "id": 19,
-        "question": "Чи надаєте ви послуги з реконструкції об'єктів, пошкоджених війною?",
-        "answer": "Так. Один із наших пріоритетів — відновлення інфраструктури. Ми маємо досвід реконструкції житлових будинків, адміністративних та соціальних об'єктів, включаючи укріплення фундаментів і несучих конструкцій."
-      }
-    ]
+    "subtitle": "Знайдіть відповіді на найпопулярніші питання про наші послуги",
+    "ctaTitle": "Не знайшли відповідь на своє питання?",
+    "ctaText": "Наші фахівці готові допомогти вам з будь-якими питаннями",
+    "contactUs": "Зв'язатися з нами"
   },
   "contact": {
     "title": "КОНТАКТИ",
