Add text edits to the about page and the home page

--- a/public/locales/uk/translation.json
+++ b/public/locales/uk/translation.json
@@ -24,7 +24,7 @@
   "main": {
     "hero": {
       "title": "Будівництво - це мистецтво створювати за допомогою матеріалів майбутнє.",
-      "description": "Ми компанія ТД Столиця Маркет - спеціалізуємося на будівництві житлових та нежитлових об'єктів, реконструкції інфраструктури, спорудженні укриттів та підземних комплексів. Наші проекти — це поєднання сучасних технологій, якісних матеріалів та відповідального підходу.",
+      "description": "Ми компанія ТД Столиця Маркет- спеціалізуємося на будівництві обʼєктів цивільної, критичної та соціальної інфраструктури. Ми не женемося за кількістю — ми обираємо якість і відповідальність. Саме так ми створюємо простір, у якому хочеться жити.",
       "learnMore": "ДІЗНАТИСЬ ДЕТАЛЬНІШЕ"
     },
     "activityDirections": {
@@ -74,6 +74,15 @@
         },
         "logistics": {
           "title": "Швидка логістика"
+        },
+        "qualityGuarantee": {
+          "title": "Гарантія якості"
+        },
+        "financialTransparency": {
+          "title": "Фінансова прозорість"
+        },
+        "flexibility": {
+          "title": "Гнучкість у рішеннях"
         }
       }
     },
@@ -85,9 +94,9 @@
   },
   "about": {
     "hero": {
-      "title": "ТД Столиця Маркет",
-      "mainQuote": "Ми будуємо не просто споруди — ми створюємо надійне майбутнє",
-      "paragraph1": "«ТД Столиця Маркет» — команда професіоналів, яка спеціалізується на будівництві житлових та нежитлових об'єктів, реконструкції інфраструктури, спорудженні укриттів та підземних комплексів. З 2016 року ми успішно реалізуємо проекти будь-якої складності, використовуючи сучасні технології, якісні матеріали та інноваційні підходи.",
+      "title": "Тд Столиця Маркет",
+      "mainQuote": "Будівництво це не просто технологія, це створення простору для життя.",
+      "paragraph1": "Тд столиця маркет- команда професіоналів, яка спеціалізується на будівництві та реконструкції інфраструктури а також зведенні захисних споруд цивільного захисту. Одним із ключових напрямків нашої діяльності є виробництво металевих та бетонних конструкцій, які забезпечують надійність, довговічність та відповідають сучасним вимогам безпеки. ",
       "viewProjects": "Дивитися проекти"
     },
     "mainContentSection": {
@@ -101,13 +110,15 @@
     "process": {
       "titleMain": "Як ми працюємо",
       "titleOne": "Аналіз та планування",
-      "descriptionOne": "Детальне вивчення потреб клієнта, розробка концепції та складання кошторису робіт.",
-      "titleTwo": "Проектування",
-      "descriptionTwo": "Створення технічної документації, 3D-моделювання об'єктів та узгодження всіх деталей.",
-      "titleThree": "Виробництво та будівництво",
-      "descriptionThree": "Виготовлення металоконструкцій, підготовка матеріалів та будівництво об'єкта під контролем інженерів.",
-      "titleFour": "Контроль якості та здача",
-      "descriptionFour": "Суворий контроль кожного етапу робіт та здача об'єкта з повною документацією та гарантією."
+      "descriptionOne": "Детальне вивчення потреб та визначення оптимальної стратегії.",
+      "titleTwo": "Проектування та візуалізація",
+      "descriptionTwo": "Розробка технічної документації, 3Д моделювання об'єктів.",
+      "titleThree": "Формування та укладання договору",
+      "descriptionThree": "Підготовка кошторису, погодження умов співпраці та підписання договору.",
+      "titleFour": "Виготовлення та будівництво",
+      "descriptionFour": "Виготовлення необхідних конструкцій і модулів, організація та початок будівництва.",
+      "titleFive": "Передача об'єкту та введення в експлуатацію",
+      "descriptionFive": "Контроль відповідності виконаних робіт, передача об'єкту з повною документацією та гарантією."
     },
     "featuredProject": {
       "title": "Наш знаковий проект",
@@ -120,16 +131,16 @@
     "values": {
       "title": "Наші цінності",
       "reliability": {
-        "title": "Надійність",
-        "description": "Ми виконуємо обіцянки та гарантуємо якість"
+        "title": "Якість",
+        "description": "Ми гарантуємо високий рівень виконання робіт і довговічність кожного проєкту"
       },
       "innovation": {
-        "title": "Інновації",
-        "description": "Постійно вдосконалюємо процеси та технології"
+        "title": "Безпека",
+        "description": "Ми створюємо об’єкти, здатні витримувати надзвичайні навантаження та забезпечувати захист у найскладніших умовах"
       },
       "responsibility": {
-        "title": "Відповідальність",
-        "description": "Працюємо з урахуванням інтересів клієнтів, суспільства та навколишнього середовища"
+        "title": "Інновації",
+        "description": "Впроваджуємо сучасні технології та матеріали"
       }
     },
     "cta": {
@@ -141,6 +152,10 @@
       "specialists": "ФАХІВЦІВ",
       "oborot": "МЛРД. ГРН. ОБОРОТУ",
       "certificates": "СЕРТИФІКАТИ ЯКОСТІ"
+    },
+    "quality": {
+      "mainText": " Уся продукція контролюється на всіх етапах виробництва, відповідає чинним нормативам та виготовляється відповідно до сертифікованої системи управління якістю: ",
+      "bottomText": " Будівництво з нами — це спокій, надійність і впевненість у результаті."
     }
   },
   "faq": {
