--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -25,7 +25,7 @@
   "main": {
     "hero": {
       "title": "Construction is the art of creating the future with materials.",
-      "description": "We are TD Capital Market company - specializing in construction of residential and non-residential buildings, reconstruction of infrastructure destroyed by war, construction of shelters and underground complexes. Our projects combine modern technologies, quality materials and a responsible approach.",
+      "description": "We are TD Capital Market company - a company specializing in the construction of civil, critical, and social infrastructure facilities. We do not chase quantity — we choose quality and responsibility. This is how we create a space where people want to live.",
       "learnMore": "LEARN MORE"
     },
     "activityDirections": {
@@ -75,6 +75,15 @@
         },
         "logistics": {
           "title": "Fast logistics"
+        },
+        "qualityGuarantee": {
+          "title": "Quality assurance"
+        },
+        "financialTransparency": {
+          "title": "Financial transparency"
+        },
+        "flexibility": {
+          "title": "Flexibility in decisions"
         }
       }
     },
@@ -86,9 +95,9 @@
   },
   "about": {
     "hero": {
-      "title": "TD Capital Market",
-      "mainQuote": "We don't just build structures — we create a reliable future",
-      "paragraph1": "«TD Capital Market» is a team of professionals specializing in the construction of residential and non-residential facilities, infrastructure reconstruction, construction of shelters and underground complexes. Since 2016, we have successfully implemented projects of any complexity, using modern technologies, quality materials and innovative approaches.",
+      "title": "Td Capital Market",
+      "mainQuote": "Construction is not just technology, it is the creation of space for life.",
+      "paragraph1": "Td Capital Market is a team of professionals specializing in the construction and reconstruction of infrastructure, as well as the construction of civil defense structures. One of the key areas of our activity is the production of metal and concrete structures that ensure reliability, durability, and meet modern safety requirements.",
       "viewProjects": "View projects"
     },
     "mainContentSection": {
@@ -101,14 +110,16 @@
     },
     "process": {
       "titleMain": "How we work",
-      "titleOne": "Analysis and planning",
-      "descriptionOne": "Detailed study of client needs, concept development and cost estimation of work.",
-      "titleTwo": "Design",
-      "descriptionTwo": "Creation of technical documentation, 3D modeling of objects and coordination of all details.",
-      "titleThree": "Manufacturing and construction",
-      "descriptionThree": "Manufacturing of metal structures, material preparation and construction of the facility under engineer supervision.",
-      "titleFour": "Quality control and delivery",
-      "descriptionFour": "Strict control of each stage of work and delivery of the facility with complete documentation and warranty."
+      "titleOne": "Analysis and Planning",
+      "descriptionOne": "Detailed study of needs and determination of optimal strategy.",
+      "titleTwo": "Design and Visualization",
+      "descriptionTwo": "Development of technical documentation and 3D modeling of objects.",
+      "titleThree": "Contract Formation and Agreement",
+      "descriptionThree": "Preparation of estimates, agreement on cooperation terms and contract signing.",
+      "titleFour": "Manufacturing and Construction",
+      "descriptionFour": "Manufacturing of necessary structures and modules, organization and start of construction.",
+      "titleFive": "Object Handover and Commissioning",
+      "descriptionFive": "Quality control of completed work, object handover with complete documentation and warranty."
     },
     "featuredProject": {
       "title": "Our landmark project",
@@ -121,16 +132,16 @@
     "values": {
       "title": "Our values",
       "reliability": {
-        "title": "Reliability",
-        "description": "We keep our promises and guarantee quality"
+        "title": "Quality",
+        "description": "We guarantee high quality workmanship and durability for every project"
       },
       "innovation": {
-        "title": "Innovation",
-        "description": "We constantly improve processes and technologies"
+        "title": "Safety",
+        "description": "We create structures that can withstand extreme loads and provide protection in the most challenging conditions"
       },
       "responsibility": {
-        "title": "Responsibility",
-        "description": "We work taking into account the interests of clients, society and the environment"
+        "title": "Innovations",
+        "description": "We implement modern technologies and materials"
       }
     },
     "cta": {
@@ -142,6 +153,10 @@
       "specialists": "SPECIALISTS",
       "oborot": "BILLION UAH TURNOVER",
       "certificates": "QUALITY CERTIFICATES"
+    },
+    "quality": {
+      "mainText": "All products are monitored at all stages of production, comply with applicable standards, and are manufactured in accordance with a certified quality management system: ",
+      "bottomText": "Building with us means peace of mind, reliability, and confidence in the result."
     }
   },
   "faq": {
