--- a/locales/uk/translation.json
+++ b/locales/uk/translation.json
@@ -24,7 +24,7 @@
   "main": {
     "hero": {
       "title": "Будівництво - це мистецтво створювати за допомогою матеріалів майбутнє.",
-      "description": "Ми компанія ТД Столиця Маркет - спеціалізуємося на будівництві житлових та нежитлових об'єктів, реконструкції інфраструктури, спорудженні укриттів та підземних комплексів. Наші проекти — це поєднання сучасних технологій, якісних матеріалів та відповідального підходу.",
+      "description": "Ми компанія ТД Столиця Маркет- спеціалізуємося на будівництві обʼєктів цивільної, критичної та соціальної інфраструктури. Ми не женемося за кількістю — ми обираємо якість і відповідальність. Саме так ми створюємо простір, у якому хочеться жити.",
       "learnMore": "ДІЗНАТИСЬ ДЕТАЛЬНІШЕ"
     },
     "activityDirections": {
@@ -74,6 +74,15 @@
         },
         "logistics": {
           "title": "Швидка логістика"
+        },
+        "qualityGuarantee": {
+          "title": "Гарантія якості"
+        },
+        "financialTransparency": {
+          "title": "Фінансова прозорість"
+        },
+        "flexibility": {
+          "title": "Гнучкість у рішеннях"
         }
       }
     },
@@ -85,9 +94,9 @@
   },
   "about": {
     "hero": {
-      "title": "ТД Столиця Маркет",
-      "mainQuote": "Ми будуємо не просто споруди — ми створюємо надійне майбутнє",
-      "paragraph1": "«ТД Столиця Маркет» — команда професіоналів, яка спеціалізується на будівництві житлових та нежитлових об'єктів, реконструкції інфраструктури, спорудженні укриттів та підземних комплексів. З 2016 року ми успішно реалізуємо проекти будь-якої складності, використовуючи сучасні технології, якісні матеріали та інноваційні підходи.",
+      "title": "Тд Столиця Маркет",
+      "mainQuote": "Будівництво це не просто технологія, це створення простору для життя.",
+      "paragraph1": "Тд столиця маркет- команда професіоналів, яка спеціалізується на будівництві та реконструкції інфраструктури а також зведенні захисних споруд цивільного захисту. Одним із ключових напрямків нашої діяльності є виробництво металевих та бетонних конструкцій, які забезпечують надійність, довговічність та відповідають сучасним вимогам безпеки. ",
       "viewProjects": "Дивитися проекти"
     },
     "mainContentSection": {
@@ -101,13 +110,15 @@
     "process": {
       "titleMain": "Як ми працюємо",
       "titleOne": "Аналіз та планування",
-      "descriptionOne": "Детальне вивчення потреб клієнта, розробка концепції та складання кошторису робіт.",
-      "titleTwo": "Проектування",
-      "descriptionTwo": "Створення технічної документації, 3D-моделювання об'єктів та узгодження всіх деталей.",
-      "titleThree": "Виробництво та будівництво",
-      "descriptionThree": "Виготовлення металоконструкцій, підготовка матеріалів та будівництво об'єкта під контролем інженерів.",
-      "titleFour": "Контроль якості та здача",
-      "descriptionFour": "Суворий контроль кожного етапу робіт та здача об'єкта з повною документацією та гарантією."
+      "descriptionOne": "Детальне вивчення потреб та визначення оптимальної стратегії.",
+      "titleTwo": "Проектування та візуалізація",
+      "descriptionTwo": "Розробка технічної документації, 3Д моделювання об'єктів.",
+      "titleThree": "Формування та укладання договору",
+      "descriptionThree": "Підготовка кошторису, погодження умов співпраці та підписання договору.",
+      "titleFour": "Виготовлення та будівництво",
+      "descriptionFour": "Виготовлення необхідних конструкцій і модулів, організація та початок будівництва.",
+      "titleFive": "Передача об'єкту та введення в експлуатацію",
+      "descriptionFive": "Контроль відповідності виконаних робіт, передача об'єкту з повною документацією та гарантією."
     },
     "featuredProject": {
       "title": "Наш знаковий проект",
@@ -120,16 +131,16 @@
     "values": {
       "title": "Наші цінності",
       "reliability": {
-        "title": "Надійність",
-        "description": "Ми виконуємо обіцянки та гарантуємо якість"
+        "title": "Якість",
+        "description": "Ми гарантуємо високий рівень виконання робіт і довговічність кожного проєкту"
       },
       "innovation": {
-        "title": "Інновації",
-        "description": "Постійно вдосконалюємо процеси та технології"
+        "title": "Безпека",
+        "description": "Ми створюємо об’єкти, здатні витримувати надзвичайні навантаження та забезпечувати захист у найскладніших умовах"
       },
       "responsibility": {
-        "title": "Відповідальність",
-        "description": "Працюємо з урахуванням інтересів клієнтів, суспільства та навколишнього середовища"
+        "title": "Інновації",
+        "description": "Впроваджуємо сучасні технології та матеріали"
       }
     },
     "cta": {
@@ -141,148 +152,18 @@
       "specialists": "ФАХІВЦІВ",
       "oborot": "МЛРД. ГРН. ОБОРОТУ",
       "certificates": "СЕРТИФІКАТИ ЯКОСТІ"
+    },
+    "quality": {
+      "mainText": " Уся продукція контролюється на всіх етапах виробництва, відповідає чинним нормативам та виготовляється відповідно до сертифікованої системи управління якістю: ",
+      "bottomText": " Будівництво з нами — це спокій, надійність і впевненість у результаті."
     }
   },
   "faq": {
     "title": "Питання та відповіді",
-    "items": [
-      {
-        "id": 1,
-        "question": "Чим «ТД Столиця Маркет» відрізняється від інших будівельних компаній?",
-        "answer": "Ми поєднуємо 9+ років досвіду з сучасними технологіями (BIM-моделювання, власне виробництво матеріалів) та дотримуємося міжнародних стандартів (ISO 9001, ISO 45001). Наші ключові переваги — це робота «під ключ», індивідуальний підхід до кожного проекту та участь у відновленні інфраструктури України."
-      },
-      {
-        "id": 2,
-        "question": "Які послуги ви пропонуєте?",
-        "answer": "Ми спеціалізуємося на:",
-        "listItems": [
-          "Будівництві (житлові/нежитлові об'єкти, укриття, реконструкція);",
-          "Виробництві (металоконструкції, бетонні фортифікаційні елементи);",
-          "Проектуванні (від концепції до реалізації);",
-          "Торгівлі (матеріали, участь у держзакупівлях)."
-        ]
-      },
-      {
-        "id": 3,
-        "question": "Чи маєте сертифікати якості?",
-        "answer": "Так, наша робота відповідає міжнародним стандартам:",
-        "listItems": [
-          "ISO 9001 (якість управління);",
-          "ISO 45001 (безпека праці);",
-          "ISO 14001 (екологічна відповідальність)."
-        ],
-        "additionalInfo": "Уся продукція виробляється згідно з ДСТУ."
-      },
-      {
-        "id": 4,
-        "question": "Які проекти ви реалізували після 2022 року?",
-        "answer": "Ми брали участь у:",
-        "listItems": [
-          "Будівництві захисних споруд і бункерів;",
-          "Відновленні зруйнованої інфраструктури;",
-          "Поставках фортифікаційних конструкцій (бетонні блоки, металеві загородження)."
-        ]
-      },
-      {
-        "id": 5,
-        "question": "Чи берете участь у тендерах?",
-        "answer": "Так, ми успішно реалізуємо державні та комерційні контракти. Наші переваги — прозорі умови, дотримання строків і підтримка на всіх етапах."
-      },
-      {
-        "id": 6,
-        "question": "Чи надаєте гарантію на об'єкти?",
-        "answer": "Так, усі роботи супроводжуються гарантійними зобов'язаннями. Термін залежить від типу проекту та обговорюється індивідуально."
-      },
-      {
-        "id": 7,
-        "question": "Як організована безпека працівників під час обстрілів?",
-        "answer": "Усі майданчики обладнані:",
-        "listItems": [
-          "Підземними сховищами з запасом води/їжі;",
-          "Супутниковим зв'язком;",
-          "Медиками-психологами в бригадах."
-        ]
-      },
-      {
-        "id": 8,
-        "question": "Чи використовуєте зарубіжні технології?",
-        "answer": "Адаптуємо світовий досвід:",
-        "listItems": [
-          "Німецькі стандарти енергоефективності;",
-          "Фінські методи швидкого будівництва в зимових умовах;",
-          "Польські тренінги з безпеки праці."
-        ]
-      },
-      {
-        "id": 9,
-        "question": "Які переваги у співпраці з вами для постачальників будматеріалів?",
-        "listItems": [
-          "Щомісячний обсяг закупівель — понад 1 млн євро",
-          "Готовність розвивати дилерську мережу бренду в Україні",
-          "Інтеграція матеріалів у проєктні рішення",
-          "Гнучкі умови оплати та логістики",
-          "Популяризація бренду через наші об'єкти"
-        ]
-      },
-      {
-        "id": 10,
-        "question": "Чи готові ви виступати офіційним дистриб'ютором будматеріалів в Україні?",
-        "answer": "Так, ми відкриті до стратегічного партнерства з виробниками та готові розвивати дилерську мережу вашої продукції, забезпечуючи її просування, логістику та присутність у ключових проєктах по всій Україні."
-      },
-      {
-        "id": 11,
-        "question": "Чи займаєтесь ви проєктуванням?",
-        "answer": "Так, наші фахівці виконують повний цикл проєктування — від концепції до реалізації, з урахуванням безпеки, енергоефективності та можливості глибокої інтеграції нових матеріалів чи рішень у структуру об'єкта."
-      },
-      {
-        "id": 12,
-        "question": "У яких регіонах України ви працюєте?",
-        "answer": "Ми працюємо по всій Україні. Наша логістика оптимізована, щоб забезпечити швидку доставку матеріалів і ефективну реалізацію проєктів незалежно від географії."
-      },
-      {
-        "id": 13,
-        "question": "Який обсяг робіт компанія може виконувати щомісяця?",
-        "answer": "Наша компанія здатна обробляти проєкти з закупівельним обсягом понад 1 млн євро щомісяця, завдяки наявності власного виробництва, логістики та досвідченої команди."
-      },
-      {
-        "id": 14,
-        "question": "Скільки співробітників працює у вашій компанії?",
-        "answer": "Наша команда складається з понад 100 кваліфікованих спеціалістів, серед яких — інженери, архітектори, проєктувальники, логісти, технічні працівники та адміністративний персонал."
-      },
-      {
-        "id": 15,
-        "question": "Чи берете участь у публічних закупівлях?",
-        "answer": "Так. Ми активно працюємо в системі Prozorro, беремо участь у відкритих тендерах та маємо успішні кейси реалізації державних контрактів у сфері будівництва та реконструкції."
-      },
-      {
-        "id": 16,
-        "question": "Які товари та матеріали ви закуповуєте найчастіше?",
-        "answer": "Ми регулярно закуповуємо:",
-        "listItems": [
-          "цемент та бетонні суміші",
-          "арматуру, металопрокат",
-          "гідроізоляційні та теплоізоляційні матеріали",
-          "електротехнічну продукцію",
-          "матеріали для фортифікаційних споруд",
-          "облицювання та фасадні системи"
-        ]
-      },
-      {
-        "id": 17,
-        "question": "Чи працюєте ви за системою «будівництво під ключ»?",
-        "answer": "Так. Ми надаємо повний цикл послуг: від проектування та узгоджень — до реалізації, контролю якості, здачі об'єкта та його подальшої підтримки."
-      },
-      {
-        "id": 18,
-        "question": "Як стати вашим постачальником або партнером?",
-        "answer": "Просто надішліть нам коротку презентацію або комерційну пропозицію. Ми розглядаємо всі запити та відкриті до довгострокових відносин з постачальниками, дистриб'юторами й виробниками, орієнтованими на якість та надійність."
-      },
-      {
-        "id": 19,
-        "question": "Чи надаєте ви послуги з реконструкції об'єктів, пошкоджених війною?",
-        "answer": "Так. Один із наших пріоритетів — відновлення інфраструктури. Ми маємо досвід реконструкції житлових будинків, адміністративних та соціальних об'єктів, включаючи укріплення фундаментів і несучих конструкцій."
-      }
-    ]
+    "subtitle": "Знайдіть відповіді на найпопулярніші питання про наші послуги",
+    "ctaTitle": "Не знайшли відповідь на своє питання?",
+    "ctaText": "Наші фахівці готові допомогти вам з будь-якими питаннями",
+    "contactUs": "Зв'язатися з нами"
   },
   "contact": {
     "title": "КОНТАКТИ",
